# controllers/mongoLBS.go
@@ -7,13 +7,14 @@ type MongoLBSController struct {
 	BaseController
 }
 
-// @Title 查询最近的地点
-// @Description 查询最近的地点，注意集合必须先创建好索引2DSphere，返回的distance为坐标的距离，{"ret": 200, "msg": "", "data": {"code": 0, "msg": "查询成功", "data": [{"_id": "5e6f236a436ec50abd7457d4", "account": "1", "collectTime": 1480602671, "distance": 902576.4266556037, "location": {"coordinates": [107.840974298098, 33.2789316522934], "type": "Point"}, "logTime": 1480602675, "platform": "android"}]}}
+// @Title 查询从近到远的地点
+// @Description 查询最近到远的地点，注意集合必须先创建好索引2DSphere，返回的distance为坐标的距离，{"ret": 200, "msg": "", "data": {"code": 0, "msg": "查询成功", "data": [{"_id": "5e6f236a436ec50abd7457d4", "account": "1", "collectTime": 1480602671, "distance": 902576.4266556037, "location": {"coordinates": [107.840974298098, 33.2789316522934], "type": "Point"}, "logTime": 1480602675, "platform": "android"}]}}
 // @Param	mongoKey		query 	string	true		"mongoKey"
 // @Param   collection		query	string  true		"集合名"
 // @Param   lon     		query	float   true		"查询的经度"
 // @Param   lat     		query	float   true		"查询的纬度"
-// @Param   maxDistance   	query	int     true		"查询多少距离内的，单位为米，默认10000米"
+// @Param   maxDistance   	query	int     true		"查询多少距离内的，单位为米，默认1000000米"
+// @Param   minDistance   	query	int     true		"查询最小多少距离外的，单位为米，默认1000米"
 // @Param   num				query	int64   true		"获取条数"
 // @router /GetNearAndDistance [get]
 func (ctx *MongoLBSController) GetNearAndDistance() {
@@ -27,7 +28,12 @@ func (ctx *MongoLBSController) GetNearAndDistance() {
 	}
 	maxDistance, err1 := ctx.GetInt64("maxDistance")
 	if err1 != nil || maxDistance < 1 {
-		maxDistance = 10000
+		maxDistance = 1000000
+	}
+
+	minDistance, err1 := ctx.GetInt64("minDistance")
+	if err1 != nil || maxDistance < 1 {
+		minDistance = 1000
 	}
 
 	num, err1 := ctx.GetInt64("num")
@@ -36,7 +42,7 @@ func (ctx *MongoLBSController) GetNearAndDistance() {
 	}
 
 	mp := ctx.ApiMongoProxy()
-	result, err := mp.FindNearLBS(lon, lat, maxDistance, num)
+	result, err := mp.FindNearLBS(lon, lat, maxDistance, minDistance, num)
 
 	if err != nil {
 		ctx.ApiFailData(2, fmt.Sprintf("%s", err), result)
